mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_missing_return_if.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Function must return a value of type 'int' on all code paths
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_missing_return_if.mux:1:1
   |
 1 | func get_value(int x) returns int {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 2 |     if x > 0 {
   | ^^^^^^^^^^^^^^
 3 |         return x * 2
   | ^^^^^^^^^^^^^^^^^^^^
   |
= help: Add a return statement at the end of every branch (if/else, match, etc.)
